--- a/julia/Paths/notebooks/optimality.ipynb
+++ b/julia/Paths/notebooks/optimality.ipynb
@@ -72,17 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "b6ccb28e-0476-4ae3-820a-33ee465ef389",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x132caf7a0>"
+       "<seaborn.axisgrid.FacetGrid at 0x1348972f0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
