Implement BCs for gridwalk moore

--- a/notebooks/optimality/netsci_optimality_plot.ipynb
+++ b/notebooks/optimality/netsci_optimality_plot.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "8daf19a6-8799-4fa7-9468-ad7f1ab83da2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "sys.path.append(os.getcwd() + \"/..\")\n",
+    "import util"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "cc733579-5832-4982-9c8c-c8e1d342dcd7",
    "metadata": {},
