Replace GRID_WALK_[name] with GRID_WALK_[number]

--- a/notebooks/cost-angles-7-22-grid.ipynb
+++ b/notebooks/cost-angles-7-22-grid.ipynb
@@ -42,7 +42,7 @@
       "random walker seeds: 4\n",
       "random locations seeds: 2\n",
       "patch recovery logic: ['LINEAR']\n",
-      "settings.searchStrategy : ['GRID_WALK_MOORE' 'GRID_WALK_NEUMANN']\n",
+      "settings.searchStrategy : ['GRID_WALK_8' 'GRID_WALK_4']\n",
       "steps: 20000\n",
       "Index(['averageTravelCost', 'averageTravelLength', 'totalImprovement',\n",
       "       'thresholdImprovement', 'steps', 'paths', 'weightedHeadings',\n",
@@ -145,7 +145,7 @@
     "for i in range(1, 5):\n",
     "    util.plot_patches(\n",
     "    df[(df[\"steps\"] == 5000) &\n",
-    "        (df[\"settings.searchStrategy\"] == \"GRID_WALK_MOORE\") &\n",
+    "        (df[\"settings.searchStrategy\"] == \"GRID_WALK_8\") &\n",
     "    (df[\"settings.randomSeedLocations\"] == 1) &\n",
     "    (df[\"settings.randomSeedWalkers\"] == i) &\n",
     "    (df[\"settings.numLocations\"] == 20)\n",
@@ -425,7 +425,7 @@
     "    _df = df[\n",
     "        (df[\"steps\"] == 2000) &\n",
     "        (df[\"settings.maxCost\"] == maxCost) &\n",
-    "        (df[\"settings.searchStrategy\"] == \"GRID_WALK_MOORE\")\n",
+    "        (df[\"settings.searchStrategy\"] == \"GRID_WALK_8\")\n",
     "        # (df[\"settings.numLocations\"] == 20)\n",
     "    ]\n",
     "    \n",
