--- a/notebooks/optimality-7-22-grid.ipynb
+++ b/notebooks/optimality-7-22-grid.ipynb
@@ -40,7 +40,7 @@
       "random walker seeds: 8\n",
       "random locations seeds: 2\n",
       "patch recovery logic: ['LINEAR']\n",
-      "settings.searchStrategy : ['GRID_WALK_NEUMANN' 'GRID_WALK_MOORE']\n",
+      "settings.searchStrategy : ['GRID_WALK_4' 'GRID_WALK_8']\n",
       "steps: 10000\n",
       "Index(['averageTravelCost', 'averageTravelLength', 'totalImprovement',\n",
       "       'thresholdImprovement', 'steps', 'paths', 'weightedHeadings',\n",
