--- a/notebooks/optimality-7-22-grid.ipynb
+++ b/notebooks/optimality-7-22-grid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "cc733579-5832-4982-9c8c-c8e1d342dcd7",
    "metadata": {},
    "outputs": [],
@@ -16,9 +16,60 @@
     "\n",
     "import util\n",
     "\n",
-    "FOLDER = \"/Users/brendan/Documents/projects/trails_project/data/\"\n",
+    "FOLDER = \"/Users/brendan/Projects/trails/data/\"\n",
     "\n",
     "# sns.set_context(\"talk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e9e4dde0-07fe-403e-9cfe-18f9ebab7e01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading 64 records.\n",
+      "63/64 "
+     ]
+    }
+   ],
+   "source": [
+    "import ijson\n",
+    "\n",
+    "FILENAME = \"optimality|2025-07-08/data.json\"\n",
+    "def load_df():\n",
+    "    records = []\n",
+    "    with open(FOLDER + FILENAME) as file:\n",
+    "        I = 0\n",
+    "        for o in ijson.items(file, \"item\"):\n",
+    "            I += 1\n",
+    "            print(f\"scanning {I}\\r\", end=\"\")\n",
+    "    print(f\"loading {I} records.\")\n",
+    "    with open(FOLDER + FILENAME) as file:\n",
+    "        i = 0\n",
+    "        for o in ijson.items(file, \"item\"):\n",
+    "            record = pd.json_normalize(o,\n",
+    "                record_path=[\"snapshots\"],\n",
+    "                   meta=[\n",
+    "                       [\"settings\", \"patchImprovement\"],\n",
+    "                       [\"settings\", \"patchRecovery\"],\n",
+    "                       [\"settings\", \"maxCost\"],\n",
+    "                       [\"settings\", \"boundaryConditions\"],\n",
+    "                       [\"settings\", \"numLocations\"],\n",
+    "                       [\"settings\", \"randomSeedWalkers\"],\n",
+    "                       [\"settings\", \"randomSeedLocations\"],\n",
+    "                       [\"settings\", \"recoveryLogic\"],\n",
+    "                       [\"settings\", \"improvementLogic\"],\n",
+    "                       [\"settings\", \"searchStrategy\"],\n",
+    "                    ])\n",
+    "            records.append(record)\n",
+    "            print(f\"{i}/{I} \\r\", end=\"\")\n",
+    "            i += 1\n",
+    "    return pd.concat(records)\n",
+    "df = load_df()"
    ]
   },
   {
@@ -205,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
