--- a/notebooks/svd-6-25.ipynb
+++ b/notebooks/svd-6-25.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "b9d954cb-92c1-4ec6-b39b-a8232170b834",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
     "\n",
     "import util\n",
     "\n",
-    "FOLDER = \"/Users/brendan/Documents/projects/trails_project/data/series/\"\n",
+    "FOLDER = \"/Users/brendan/Projects/trailsdata/\"\n",
     "\n",
     "SIZE = 10000\n",
     "STEPS = 40000\n",
@@ -29,42 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "3d27a511-a39e-4d52-9869-97e7ea100208",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ratios: [100.0]\n",
-      "patch recovery: [0.001 0.0005]\n",
-      "max costs: [2.0]\n",
-      "boundary conditions: ['PERIODIC' 'SOLID']\n",
-      "num locations: [10]\n",
-      "random walker seeds: 64\n",
-      "random locations seeds: 1\n",
-      "patch recovery logic: ['LINEAR']\n",
-      "steps: 40000\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/brendan/Projects/trails/data/SVD|2025-06-24/data.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dfs \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      2\u001b[0m     util\u001b[38;5;241m.\u001b[39mload_data(FOLDER \u001b[38;5;241m+\u001b[39m datafile) \u001b[38;5;28;01mfor\u001b[39;00m datafile \u001b[38;5;129;01min\u001b[39;00m datafiles\n\u001b[1;32m      3\u001b[0m ]\n\u001b[1;32m      4\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat(dfs)\n\u001b[1;32m      5\u001b[0m util\u001b[38;5;241m.\u001b[39mdescribe(df)\n",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m dfs \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mutil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mFOLDER\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdatafile\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m datafile \u001b[38;5;129;01min\u001b[39;00m datafiles\n\u001b[1;32m      3\u001b[0m ]\n\u001b[1;32m      4\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat(dfs)\n\u001b[1;32m      5\u001b[0m util\u001b[38;5;241m.\u001b[39mdescribe(df)\n",
+      "File \u001b[0;32m~/Projects/trails/notebooks/util.py:40\u001b[0m, in \u001b[0;36mload_data\u001b[0;34m(datafile)\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mload_data\u001b[39m(datafile):\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;66;03m# load the json, and normalize into a dataframe\u001b[39;00m\n\u001b[0;32m---> 40\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdatafile\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     41\u001b[0m         df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mjson_normalize(json\u001b[38;5;241m.\u001b[39mload(f), record_path\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msnapshots\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m     42\u001b[0m                                meta\u001b[38;5;241m=\u001b[39m[\n\u001b[1;32m     43\u001b[0m                                    [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msettings\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpatchImprovement\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     52\u001b[0m                                    [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msettings\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msearchStrategy\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m     53\u001b[0m                                 ])\n\u001b[1;32m     55\u001b[0m     \u001b[38;5;66;03m# hopefully won't be necessary forever\u001b[39;00m\n\u001b[1;32m     56\u001b[0m     \u001b[38;5;66;03m# df[\"run_id\"] = [i // 201 for i in range(df.shape[0])]\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/brendan/Projects/trails/data/SVD|2025-06-24/data.json'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Index(['averageTravelCost', 'averageTravelLength', 'totalImprovement',\n",
-       "       'thresholdImprovement', 'steps', 'paths', 'weightedHeadings',\n",
-       "       'avgHeading', 'avgSquareHeading', 'patches',\n",
-       "       'settings.patchImprovement', 'settings.patchRecovery',\n",
-       "       'settings.maxCost', 'settings.boundaryConditions',\n",
-       "       'settings.numLocations', 'settings.randomSeedWalkers',\n",
-       "       'settings.randomSeedLocations', 'settings.recoveryLogic',\n",
-       "       'settings.improvementLogic', 'ratio'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -528,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
